feat: update table edit

--- a/apps/mix-cms/src/styles.scss
+++ b/apps/mix-cms/src/styles.scss
@@ -301,3 +301,14 @@ ngneat-dialog {
 .tippy-arrow {
   display: none;
 }
+
+.ag-theme-alpine {
+  /* disable all borders */
+  --ag-borders: none;
+  /* then add back a border between rows */
+  --ag-row-border-style: solid;
+  --ag-row-border-width: 1px;
+  --ag-row-border-color: var(--border-color-default);
+  --ag-odd-row-background-color: var(--background-color-primary);
+  --ag-cell-horizontal-border: 1px solid var(--border-color-default);
+}
