--- a/apps/mix-cms/src/app/pages/portal/database-data/database-data.component.html
+++ b/apps/mix-cms/src/app/pages/portal/database-data/database-data.component.html
@@ -16,7 +16,6 @@
       </div>
     </ng-container>
 
-
     <ng-container *ngIf="vm.status !== 'Pending'">
       <mix-sub-toolbar [description]="'LISTING'"
                        [title]="vm.db?.displayName || 'Db Data'">
@@ -37,9 +36,12 @@
             <ag-grid-angular class="ag-theme-alpine"
                              [animateRows]="true"
                              [columnDefs]="columnDefs"
+                             [components]="components"
                              [defaultColDef]="defaultColDef"
                              [rowData]="rowData$ | async"
+                             [rowDragManaged]="true"
                              [rowSelection]="'multiple'"
+                             [suppressMoveWhenRowDragging]="true"
                              (gridReady)="onGridReady($event)"
                              style="width: 100%; height: 100%">
             </ag-grid-angular>
@@ -130,11 +132,10 @@
           </ng-container>
         </div>
 
-
         <div class="mix-dbs-table__footer">
           <div class="d-flex gap-2">
-            Total items: <strong>{{ vm.pageInfo.total || '--' }}</strong> &nbsp; Page
-            size: <strong>{{ vm.pageInfo.pageSize || '0' }}</strong>
+            Total items: <strong>{{ vm.pageInfo.total || '--' }}</strong> &nbsp;
+            Page size: <strong>{{ vm.pageInfo.pageSize || '0' }}</strong>
           </div>
 
           <tui-pagination *ngIf="!!vm.pageInfo?.totalPage"
