--- a/apps/mix-cms/src/app/pages/portal/database-data/components/custom-header/custom-header.component.scss
+++ b/apps/mix-cms/src/app/pages/portal/database-data/components/custom-header/custom-header.component.scss
@@ -2,3 +2,9 @@ mix-custom-header {
   display: block;
   width: 100%;
 }
+
+.header-title {
+  flex-grow: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
