--- a/apps/mix-cms/src/styles.scss
+++ b/apps/mix-cms/src/styles.scss
@@ -302,13 +302,22 @@ ngneat-dialog {
   display: none;
 }
 
+.tippy-box {
+  border-radius: var(--element-rounded) !important;
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
+    rgba(27, 31, 35, 0.15) 0px 0px 0px 1px !important;
+}
+
 .ag-theme-alpine {
   /* disable all borders */
   --ag-borders: none;
   /* then add back a border between rows */
+  --ag-border-color: var(--tui-base-04);
+  --ag-borders-critical: 1px solid;
   --ag-row-border-style: solid;
   --ag-row-border-width: 1px;
   --ag-row-border-color: var(--border-color-default);
   --ag-odd-row-background-color: var(--background-color-primary);
+  --ag-background-color: var(--background-color-primary);
   --ag-cell-horizontal-border: 1px solid var(--border-color-default);
 }
