--- a/apps/mix-cms/src/styles.scss
+++ b/apps/mix-cms/src/styles.scss
@@ -320,4 +320,7 @@ ngneat-dialog {
   --ag-odd-row-background-color: var(--background-color-primary);
   --ag-background-color: var(--background-color-primary);
   --ag-cell-horizontal-border: 1px solid var(--border-color-default);
+  --ag-header-height: 32px;
+  --ag-row-height: 32px;
+  --ag-row-hover-color: rgba(233, 234, 237, 0.5);
 }
