feat: update api document

--- a/apps/mix-cms/src/app/pages/portal/database-data/database-data.component.html
+++ b/apps/mix-cms/src/app/pages/portal/database-data/database-data.component.html
@@ -52,7 +52,8 @@
 
           <mix-button class="ms-auto"
                       type="outline"
-                      size="m">API Document</mix-button>
+                      size="m">
+            <span class="mix-icon">code</span>&nbsp; API Document</mix-button>
         </div>
 
         <div class="mix-dbs-table__main-container">
