feat: add column change

--- a/apps/mix-cms/src/app/components/database-select/database-select.component.html
+++ b/apps/mix-cms/src/app/components/database-select/database-select.component.html
@@ -21,7 +21,7 @@
       <div class="database-select__item"
            [class.--active]="selectedItemId == table.id"
            (click)="selectDb(table)">
-        <span class="mix-icon">database</span>
+        <!-- <span class="mix-icon">database</span> -->
         <span>{{ table.displayName }}</span>
       </div>
     </ng-container>
