--- a/apps/mix-cms/src/app/pages/portal/database/database-document/database-document.component.html
+++ b/apps/mix-cms/src/app/pages/portal/database/database-document/database-document.component.html
@@ -5,11 +5,55 @@
                          [selectedItemId]="db?.id"></mix-database-select>
   </div>
 
-
   <div class="data-table-page__main-container">
     <div class="open-api-preview">
-      <div class="open-api-preview__header">
-        {{ db?.displayName }}
+      <div class="open-api-preview__menu">
+        <div class="title">
+          <span class="mix-icon">hub</span> {{ db?.displayName }}
+        </div>
+        <tui-accordion class="w-100"
+                       [closeOthers]="false">
+          <tui-accordion-item [open]="true">
+            Restful API
+            <ng-template tuiAccordionItemContent>
+              <div class="menu-item">
+                <span class="open-api-type -get">get</span> List
+                {{ db?.displayName }} records
+              </div>
+              <div class="menu-item">
+                <span class="open-api-type -post">post</span> Update
+                {{ db?.displayName }} record by id
+              </div>
+              <div class="menu-item">
+                <span class="open-api-type -put">patch</span> Patch
+                {{ db?.displayName }} record by id
+              </div>
+              <div class="menu-item">
+                <span class="open-api-type -delete">del</span> Delete
+                {{ db?.displayName }} record by id
+              </div>
+            </ng-template>
+          </tui-accordion-item>
+          <tui-accordion-item>
+            Web Hook
+            <ng-template tuiAccordionItemContent>
+              <div class="menu-item">Coming soon...</div>
+            </ng-template>
+          </tui-accordion-item>
+          <tui-accordion-item>
+            Incoming
+            <ng-template tuiAccordionItemContent>
+              <div class="menu-item">Coming soon...</div>
+            </ng-template>
+          </tui-accordion-item>
+        </tui-accordion>
+      </div>
+
+      <div class="open-api-preview__content">
+        <div class="open-api-preview__codezone">
+          <div class="text-l">Request samples</div>
+          <code [innerHtml]="text"> </code>
+        </div>
       </div>
     </div>
   </div>
