--- a/libs/mix-ui/src/modal/modal.component.scss
+++ b/libs/mix-ui/src/modal/modal.component.scss
@@ -8,24 +8,28 @@ mix-modal {
 
 .mix-modal {
   display: block;
+  min-width: 350px;
   padding: 1.5rem;
   margin: auto;
   border-radius: 0 0 0.75rem 0.75rem;
   background: var(--tui-base-01);
   box-shadow: inset 0 4px var(--modal-boxshadow);
-  animation: tuiReveal var(--tui-duration), tuiFadeIn var(--tui-duration);
+
+  &__content {
+    margin-top: 1.5rem;
+  }
 
   &__buttons {
     display: flex;
     justify-content: center;
-    margin: 1.5rem 0 0;
+    margin: 2rem 0 0;
 
     button:first-child {
-      margin-right: 8px;
+      margin-right: 4px;
     }
 
     button:last-child {
-      margin-left: 8px;
+      margin-left: 4px;
     }
   }
 }
