--- a/libs/mix-ui/src/button/button.component.html
+++ b/libs/mix-ui/src/button/button.component.html
@@ -1,4 +1,4 @@
-<button class="font-bold rounded flex items-center outline-none {{ typeMaps[type] }}"
+<button class="font-medium rounded flex items-center outline-none {{ typeMaps[type] }}"
         [class.btn-icon]="iconBtn"
         [class.btn-large]="largeBtn">
   <ng-container *ngTemplateOutlet="content"> </ng-container>
