--- a/apps/mix-cms/src/app/pages/portal/app-settings/app-settings.component.html
+++ b/apps/mix-cms/src/app/pages/portal/app-settings/app-settings.component.html
@@ -56,7 +56,7 @@
                 </mix-button>
 
                 <mix-button class="ms-4"
-                            type="secondary-danger"
+                            type="danger"
                             title="Delete"
                             [iconBtn]="true"
                             (click)="delete(setting.id)"><span class="material-symbols-outlined"> delete </span>
