--- a/apps/mix-cms/src/app/pages/portal/discount/discount.component.html
+++ b/apps/mix-cms/src/app/pages/portal/discount/discount.component.html
@@ -5,7 +5,7 @@
       <div class="toolbar-separator"></div>
 
       <mix-button class="mr-1"
-                  type="secondary-danger"
+                  type="danger"
                   [disabled]="!selectedPosts.length"
                   (click)="onBulkRemoveDiscount()"
                   size="s">
