--- a/apps/mix-cms/src/app/pages/portal/page/page.component.html
+++ b/apps/mix-cms/src/app/pages/portal/page/page.component.html
@@ -8,7 +8,7 @@
         Add</mix-button>
       <div class="toolbar-separator"></div>
       <mix-button class="mr-1"
-                  type="secondary-danger"
+                  type="danger"
                   [disabled]="!selectedPages.length"
                   size="s">
         <span class="material-symbols-outlined"> delete </span>&nbsp;
