--- a/apps/mix-cms/src/assets/styles/overwrite-variables.scss
+++ b/apps/mix-cms/src/assets/styles/overwrite-variables.scss
@@ -73,8 +73,8 @@
   --tui-secondary: #ebefff; // inputs and secondary buttons
   --tui-secondary-hover: #dfe3f3; // inputs and secondary buttons hover
   --tui-secondary-active: #d8ddf2; // inputs and secondary buttons pressed
-  --tui-accent: #ff7043; // fill and outline of accent elements
-  --tui-accent-hover: #ff9a94; // accent elements hover
+  --tui-accent: #fc3838; // fill and outline of accent elements
+  --tui-accent-hover: #fd474796; // accent elements hover
   --tui-accent-active: #e7716a; // accent elements pressed
   --tui-accent-text: #fff; // text on accent background
   --tui-selection: rgba(112, 182, 246, 0.12); // selected text background
