--- a/apps/mix-cms/src/app/pages/portal/database/database.component.html
+++ b/apps/mix-cms/src/app/pages/portal/database/database.component.html
@@ -8,13 +8,12 @@
                   size="s"><span class="material-symbols-outlined"> add </span>&nbsp; New
         MixDb</mix-button>
       <div class="toolbar-separator"></div>
-      <mix-button type="secondary-danger"
+      <mix-button type="danger"
                   [disabled]="!selectedTable.length"
                   (click)="onDeleteTable()"
                   size="s">
         <span class="material-symbols-outlined"> delete </span>&nbsp;
         Delete(s)</mix-button>
-
 
       <mix-dynamic-filter class="d-block ms-auto"></mix-dynamic-filter>
     </mix-sub-toolbar>
