--- a/apps/mix-cms/src/app/pages/portal/module/module.component.html
+++ b/apps/mix-cms/src/app/pages/portal/module/module.component.html
@@ -8,7 +8,7 @@
                   size="s"><span class="material-symbols-outlined"> add </span>&nbsp;
         Add</mix-button>
       <div class="toolbar-separator"></div>
-      <mix-button type="secondary-danger"
+      <mix-button type="danger"
                   [disabled]="!selectedPages.length"
                   size="s">
         <span class="material-symbols-outlined"> delete </span>&nbsp;
