--- a/libs/mix-ui/src/data-table/data-table.component.scss
+++ b/libs/mix-ui/src/data-table/data-table.component.scss
@@ -16,7 +16,7 @@
   padding-top: 12px;
 
   .search-input {
-    min-width: 200px;
+    width: 100%;
   }
 
   &__checkbox {
@@ -131,6 +131,10 @@
 
   &__empty-content {
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 
     &-default {
       &-ellipse {
