feat: revert code and optimize function

--- a/apps/mix-cms/src/assets/styles/variables.scss
+++ b/apps/mix-cms/src/assets/styles/variables.scss
@@ -27,7 +27,7 @@ html {
   --border-color-default: #ededed;
   --border-radius-default: 6px;
 
-  --primary-color: rgb(10, 120, 190);
+  --primary-color: rgb(59 130 246);
   --default-primary-color-hue: 210;
   --success-color: #20c997;
 
